test/sema/typeck/class/unnamed-access-on-named.dora
class Foo { a: Int, b: Bool }
fn f(x: Foo): Int {
    x.0
}

//====================
// error: unknown field `0` for type `Foo`
// --> unnamed-access-on-named.dora:3:7
//  | class Foo { a: Int, b: Bool }
//  | fn f(x: Foo): Int {
//  |     x.0
//          ~
//  | }
//  | 
// 1 error found.
